# ppt_parser

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
api/: database.py  main.py
api/routers/: media.py  presentations.py  slides.py
api/services/: slide_service.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: PresentationList.tsx  SlideCanvas.tsx  SlideNavigator.tsx  SlideViewer.tsx
frontend/src/components/shapes/: AutoShapeRenderer.tsx  ChartRenderer.tsx  ConnectorRenderer.tsx  GroupRenderer.tsx  PictureRenderer.tsx  ShapeRenderer.tsx  TableRenderer.tsx  TextBoxRenderer.tsx
frontend/src/components/text/: ParagraphRenderer.tsx  RunRenderer.tsx
frontend/src/utils/: emu.ts  geometry.ts
parser/: capture.py  cli.py  color.py  connector.py  db.py  group.py  image.py  presentation.py  shape.py  slide.py  table.py  text.py  theme.py  xml_util.py
scripts/: compare_slides.py  identify_diffs.py
